kubernetes-flux/hyper/media/plex-files/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex-files
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex-files
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-system
      toPorts:
        - ports:
            - port: "80"
  egress:
    - {}
